Fix Vercel development build (#17)
* Test why Vercel build fails

* Add explicit yarn install command

* Add focused install option

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "modules"
   ],
   "scripts": {
-    "build": "yarn --cwd ./core build && yarn --cwd ./modules build && cpy './modules/public/modules.json' './core/public/' && cpy './modules/public/modules' './core/public/modules/@patchcab-modules'"
+    "build": "yarn --cwd ./core build && yarn --cwd ./modules install --focus && yarn --cwd ./modules build && cpy './modules/public/modules.json' './core/public/' && cpy './modules/public/modules' './core/public/modules/@patchcab-modules'"
   },
   "dependencies": {}
 }
